--- a/_data/kultur.yml
+++ b/_data/kultur.yml
@@ -19,7 +19,7 @@
 
       - id: 1-3
         title: Orakel von Delphi
-        description: "DIn der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Corinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas bestimmte."
+        description: "In der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Corinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas bestimmte."
 
       - id: 1-4
         title: Olympia Peleponnes
@@ -30,11 +30,10 @@
 
 
 - id: two
-  title: "Historische Städte"
+  title: "Hellenische Highlights"
   page: kultur
   img: bg-img2
-  visible: none;
-  description: "Gemächlich kauende Dromedare, frisches Kokoswasser, türkises Meer und traumhafte Sandstrände, mit einem Hauch von Karibik – das erwartet Sie in der Küstenstadt Salalah im Südwesten des Sultanats Oman. Eine exotische Naturlandschaft, traditionelle Märkte und authentische Ursprünglichkeit machen Salalah zu einem Ziel für Entdecker und Genießer. Hier versteckt sich eine perfekte Komposition aus Badeparadies und Kulturstadt, die als Mittelpunkt der Weihrauchstraße einst zu den wichtigsten Handelszentren des Landes gehörte."
+  description: "Romantische Häfen, verwinkelte Altstadt-Gassen, trotzige Festungen – im Freilichtmuseum Griechenland ist das nächste historische Highlight nicht weit entfernt. Der Großmeisterpalast von Rhodos, das von venezianischen Wehranlagen behütete Zentrum von Korfu-Stadt und das byzantinische Erbe von Thessaloniki machen den Städtetrip zur Zeitreise. Pittoreske Schmuckstücke wie Nafplio würzen das geschichtsträchtige Ambiente mit hellenischem Hafenflair."
 
   pois:
 
@@ -43,23 +42,23 @@
 
       - id: 2-1
         title: Korfu-Stadt
-        description: "Im Herzen von Makedonien gehören die Ausgrabungsstätten rund um die antike Metropole Aigai zu den bedeutendsten Vermächtnissen des makedonischen Königreichs. Vergoldete Grabbeigaben, verziert mit dem Stern von Vergina, erzählen von epischen Heldentaten. Die einstige Hauptstadt beherbergt die Ruhestätten zahlreicher Herrscher sowie eine eiszeitliche Nekropole, die in Kombination mit einem unterirdischen Museumsbau ehrfürchtige Einblicke in die Geschichte Griechenlands gewährt."
+        description: "Machen Sie sich gefasst auf Griechenlands besterhaltene mittelalterliche Altstadt, blicken Sie von der venezianischen Hafenfestung über das Ionische Meer und entdecken Sie das zum UNESCO-Weltkulturerbe gehörende Gesamtkunstwerk Korfu-Stadt. Kleine Kaffeehäuser und kühle Gassen laden zum Verweilen ein. Beim abendlichen Flanieren über die Esplanade und romantischen Sonnenuntergängen am Schloss Mon Repos wird die kultivierte Kulisse mit Leben erfüllt. "
 
       - id: 2-2
         title: Thessaloniki
-        description: "Eine der schönsten Vorlagen für einen Citytrip ist die Akropolis von Athen. Auf einem Felsen über der Stadt thronend, lockt das weltberühmte Wahrzeichen der griechischen Hauptstadt Jahr für Jahr kulturbegeisterte Entdecker aus aller Welt zu einer der bedeutendsten UNESCO-Welterbestätten Europas. Ein Monument der Geschichte, das man nicht nur wegen dem Pantheon, sondern auch wegen des sagenhaften Panoramas über Athen gesehen haben muss. "
+        description: "In Thessaloniki haben kulturbegeisterte Städtereisende die Qual der Wahl. Hier verschmelzen die Vermächtnisse unterschiedlicher Epochen zu einem begehbaren Denkmal. Römische, osmanische und griechische Einflüsse verleihen der Hauptstadt Makedoniens multikulturellen Glanz, der sich vom Trigonios-Turm der Zitadelle herrlich überblicken lässt. Der Axios Nationalpark im Westen der Stadt lädt nach dem Sightseeing zum Durchatmen zwischen Lagunen und Salinen ein."
 
       - id: 2-3
         title: Chania (Kreta)
-        description: "DIn der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Corinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas bestimmte."
+        description: "Einst lagen vor Chania die Schiffe der venezianischen Flotte, heute sind es vorwiegend Luxus-Yachten und Fischerboote, die mit Blick auf den ägyptischen Leuchtturm vor Anker gehen. An der autofreien Promenade relaxen Sie in schnuckligen Tavernen zwischen denkmalgeschützten Ensembles. Gleich dahinter empfängt Sie ein Gewirr aus Gassen, Boutiquen und altertümlichen Ruinen, die teilweise als stilechte Bühne für kretische Straßenkünstler dienen. "
 
       - id: 2-4
         title: Mittelalterliche Stadt von Rhodos
-        description: "Die Peloponnes verzaubert mit einer magischen Melange aus Stränden, Kultur und archäologischen Stätten. Dem Göttervater Zeus gewidmet, war das Areal einst Austragungsort sportlicher Wettkämpfe mit Athleten aus aller Welt. Eine Tradition, die bis heute Bestand hat und beim feierlichen Entzünden der olympischen Flamme vor den Ruinen des Hera-Tempels stilecht zelebriert wird. Ein absolutes Muss nicht nur für sportbegeisterte Aktivurlauber."
+        description: "Eine vollständig erhaltene Stadtbefestigung, der weithin sichtbare Großmeisterpalast und das Marientor am Hafen sind nur einige der kolossalen Beigaben, mit denen Rhodos-Stadt Besucher anzieht. Ein Spaziergang zum Fort St. Nicholas gewährt Ausblicke über den Hafen, während zahlreiche Museen und Sakralbauten unterschiedlicher Religionen von der kosmopolitischen Anziehungskraft der Inselhauptstadt zeugen. Zur mittelalterlichen Magie gesellt sich der antike Charme der Akropolis von Rhodos."
 
       - id: 2-5
         title: Nafplio
-        description: "Die Peloponnes verzaubert mit einer magischen Melange aus Stränden, Kultur und archäologischen Stätten. Dem Göttervater Zeus gewidmet, war das Areal einst Austragungsort sportlicher Wettkämpfe mit Athleten aus aller Welt. Eine Tradition, die bis heute Bestand hat und beim feierlichen Entzünden der olympischen Flamme vor den Ruinen des Hera-Tempels stilecht zelebriert wird. Ein absolutes Muss nicht nur für sportbegeisterte Aktivurlauber."
+        description: "Mit ihren drei Festungen, den imposanten Stadttoren und den wie Bernstein leuchtenden Fassaden gehört Nafplio zu den pittoreskesten Hafenstädten auf der Peloponnes. Auf einer felsigen Landzunge über dem Argolischen Golf thronend, versprüht die einstige Hauptstadt Griechenlands mediterrane Unbekümmertheit und altmodischen Chic. Nur 30 Kilometer weiter östlich komplettiert die kultige Silhouette von Epidauros das Bild vom hellenischen Idyll. "
 
 
 
@@ -67,11 +66,10 @@
 
 
 - id: three
-  title: "Feste & Unterhaltung"
+  title: "Göttlicher Kulturtrip"
   page: kultur
   img: bg-img3
-  visible: none;
-  description: "Gemächlich kauende Dromedare, frisches Kokoswasser, türkises Meer und traumhafte Sandstrände, mit einem Hauch von Karibik – das erwartet Sie in der Küstenstadt Salalah im Südwesten des Sultanats Oman. Eine exotische Naturlandschaft, traditionelle Märkte und authentische Ursprünglichkeit machen Salalah zu einem Ziel für Entdecker und Genießer. Hier versteckt sich eine perfekte Komposition aus Badeparadies und Kulturstadt, die als Mittelpunkt der Weihrauchstraße einst zu den wichtigsten Handelszentren des Landes gehörte."
+  description: "Bekannt als europäische Heimat der Künste, Austragungsstätte olympischer Gesangswettbewerbe und antike Vorlage für Tragödien und Komödien dient Griechenland bis heute als Schauplatz für kulturelle Veranstaltungen von Weltformat. Lauschen Sie klassischen Konzerten in der Athens Concert Hall, lassen Sie sich beim alljährlich stattfindenden Athens and Epidaurus Festival von antiken Kulissen verzaubern und erleben Sie zeitgenössische Darbietungen im National Theatre of Northern Greece in der makedonischen Kulturmetropole Thessaloniki."
 
   pois:
 
@@ -79,24 +77,16 @@
     items:
 
       - id: 3-1
-        title: Korfu-Stadt
-        description: "Im Herzen von Makedonien gehören die Ausgrabungsstätten rund um die antike Metropole Aigai zu den bedeutendsten Vermächtnissen des makedonischen Königreichs. Vergoldete Grabbeigaben, verziert mit dem Stern von Vergina, erzählen von epischen Heldentaten. Die einstige Hauptstadt beherbergt die Ruhestätten zahlreicher Herrscher sowie eine eiszeitliche Nekropole, die in Kombination mit einem unterirdischen Museumsbau ehrfürchtige Einblicke in die Geschichte Griechenlands gewährt."
+        title: Hellenic Festival, Athen
+        description: "IJedes Jahr von Mai bis Oktober verwandelt sich Athen in eine Metropole der Kultur. Open-Air-Konzerte mit Weltstars, Theateraufführungen in antiken Kulissen und ein facettenreiches Rahmenprogramm lassen die Hauptstadt in altem Glanz erstrahlen. Ob Tragödie im Amphitheater von Epidauros, byzantinisch inspirierter Jazz oder monumental inszenierte Klassik – beim Athens and Epidaurus Festival werden die Straßen zur Bühne. "
 
       - id: 3-2
-        title: Thessaloniki
-        description: "Eine der schönsten Vorlagen für einen Citytrip ist die Akropolis von Athen. Auf einem Felsen über der Stadt thronend, lockt das weltberühmte Wahrzeichen der griechischen Hauptstadt Jahr für Jahr kulturbegeisterte Entdecker aus aller Welt zu einer der bedeutendsten UNESCO-Welterbestätten Europas. Ein Monument der Geschichte, das man nicht nur wegen dem Pantheon, sondern auch wegen des sagenhaften Panoramas über Athen gesehen haben muss. "
+        title: Konzert in Athens Concert Hall
+        description: "Die Athens Concert Hall gehört zweifellos zu den kulturellen Highlights der Hauptstadt. Seit der feierlichen Eröffnung im Jahre 1991 hat sich das Angebot stetig erweitert. Neben Konzerten klassischer Ensembles und Solisten finden in der Megaro Mousikis auch Ausstellungen zu den Themen Architektur, Design und bildende Kunst statt. Die Konzertorgel mit mehr als 6.000 Pfeifen macht der Göttin der Kunst alle Ehre."
 
       - id: 3-3
-        title: Chania (Kreta)
-        description: "DIn der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Corinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas bestimmte."
-
-      - id: 3-4
-        title: Mittelalterliche Stadt von Rhodos
-        description: "Die Peloponnes verzaubert mit einer magischen Melange aus Stränden, Kultur und archäologischen Stätten. Dem Göttervater Zeus gewidmet, war das Areal einst Austragungsort sportlicher Wettkämpfe mit Athleten aus aller Welt. Eine Tradition, die bis heute Bestand hat und beim feierlichen Entzünden der olympischen Flamme vor den Ruinen des Hera-Tempels stilecht zelebriert wird. Ein absolutes Muss nicht nur für sportbegeisterte Aktivurlauber."
-
-      - id: 3-5
-        title: Nafplio
-        description: "Die Peloponnes verzaubert mit einer magischen Melange aus Stränden, Kultur und archäologischen Stätten. Dem Göttervater Zeus gewidmet, war das Areal einst Austragungsort sportlicher Wettkämpfe mit Athleten aus aller Welt. Eine Tradition, die bis heute Bestand hat und beim feierlichen Entzünden der olympischen Flamme vor den Ruinen des Hera-Tempels stilecht zelebriert wird. Ein absolutes Muss nicht nur für sportbegeisterte Aktivurlauber."
+        title: Kunst und Kultur in Thessaloniki
+        description: "Eine von Stararchitekt Arata Isozaki entworfene Philharmonie, ein Freilichttheater im größten Park der Stadt und die Aufführungen des National Theatre of Northern Greece sind nur einige der kulturellen Glanzpunkte, mit denen Thessaloniki aufwartet. Viele einheimische Größen aus Film und Fernsehen habe Ihre Karriere in einem der vielen kleinen aber traditionsreichen Theater gestartet. Die Städtische Pinakothek lockt mit Exponaten von berühmten Künstlern wie Salvador Dalí und Roy Lichtenstein."
 
 
 
