--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Griechenland
 client:
   name: Griechenland - Ein Kosmos voller Sehnsuchtsorte
-  link: "http://bit.ly/2xxsPKS"
+  link: "http://www.visitgreece.gr/"
 core-se-link: https://www.secretescapes.de/aktuelle-angebote
 description: >
   Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – die Heimat der Götter ist seit jeher ein Garant für mediterrane Sternstunden..
