last text corrections

--- a/_data/straende.yml
+++ b/_data/straende.yml
@@ -117,7 +117,7 @@
 
       - id: 4-1
         title: Kos
-        description: "WWährend auf Kos mittelalterliche Festungsanlagen, jahrhundertealte Platanen und abgelegene Dörfer das Auge erfreuen, ziehen die Küsten mit endlosen Puderzuckerstränden, Thermalquellen und von zahlreichen Fischarten belebten Riffen die Blicke auf sich. Zu den Unterwasser-Highlights rund um Kos gehört unter anderem das Wrack der Thor Star, die am Kap Roussa zwischen Kos und der für ihre Kapernzucht berühmten Nachbarinsel Pserimos auf Grund liegt. In der Nähe des Paradise Beach machen Sie mit ein wenig Glück Begegnung mit Oktopussen, die in den Tavernen im Hafen des Fischerdorfs Kali Kardia zu den beliebtesten Gerichten gehören."
+        description: "Während auf Kos mittelalterliche Festungsanlagen, jahrhundertealte Platanen und abgelegene Dörfer das Auge erfreuen, ziehen die Küsten mit endlosen Puderzuckerstränden, Thermalquellen und von zahlreichen Fischarten belebten Riffen die Blicke auf sich. Zu den Unterwasser-Highlights rund um Kos gehört unter anderem das Wrack der Thor Star, die am Kap Roussa zwischen Kos und der für ihre Kapernzucht berühmten Nachbarinsel Pserimos auf Grund liegt. In der Nähe des Paradise Beach machen Sie mit ein wenig Glück Begegnung mit Oktopussen, die in den Tavernen im Hafen des Fischerdorfs Kali Kardia zu den beliebtesten Gerichten gehören."
 
       - id: 4-2
         title: Mykonos
