--- a/_data/unentdeckt.yml
+++ b/_data/unentdeckt.yml
@@ -32,7 +32,7 @@
 
 
 - id: four
-  title: "Váthia (Peloponnes)"
+  title: "Vathia (Peloponnes)"
   page: unentdeckt
   img: bg-img4
   description: "An der Südspitze der Peloponnes, eingerahmt vom Messenischen Golf und kargen Bergen und Olivenhainen, sorgt ein ehemaliges Piratennest für staunende Augen. Ein denkmalgeschütztes Dorf mit Skyline aus Naturstein, wie eine uneinnehmbare Trutzburg auf einem Hügel thronend, wie geschaffen für eine Verschnaufpause von der Realität und imposanter Beweis dafür, dass auf dem griechischen Festland zahllose Überraschungen&nbsp;warten. "
