--- a/_data/kultur.yml
+++ b/_data/kultur.yml
@@ -11,11 +11,11 @@
 
       - id: 1-1
         title: Aigai, Makedonien
-        description: "Im Herzen von Makedonien gehören die Ausgrabungsstätten rund um die antike Metropole Aigai zu den bedeutendsten Vermächtnissen des makedonischen Königreichs. Vergoldete Grabbeigaben, verziert mit dem Stern von Vergina, erzählen von epischen Heldentaten. Die einstige Hauptstadt beherbergt die Ruhestätten zahlreicher Herrscher sowie eine eiszeitliche Nekropole, die in Kombination mit einem unterirdischen Museumsbau ehrfürchtige Einblicke in die Geschichte Griechenlands&nbsp;gewährt."
+        description: "Im Herzen von Makedonien gehören die Ausgrabungsstätten rund um die antike Metropole Aigai zu den bedeutendsten Vermächtnissen des makedonischen Königreichs. Vergoldete Grabbeigaben, verziert mit dem Stern von Vergina, erzählen von epischen Heldentaten. Die einstige Hauptstadt beherbergt die Ruhestätten zahlreicher Herrscher sowie eine eisenzeitliche Nekropole, die in Kombination mit einem unterirdischen Museumsbau ehrfürchtige Einblicke in die Geschichte Griechenlands&nbsp;gewährt."
 
       - id: 1-2
         title: Akropolis, Athen
-        description: "Eine der schönsten Vorlagen für einen Citytrip ist die Akropolis von Athen. Auf einem Felsen über der Stadt thronend, lockt das weltberühmte Wahrzeichen der griechischen Hauptstadt Jahr für Jahr kulturbegeisterte Entdecker aus aller Welt zu einer der bedeutendsten UNESCO-Welterbestätten Europas. Ein Monument der Geschichte, das man nicht nur wegen dem Pantheon, sondern auch wegen des sagenhaften Panoramas über Athen gesehen haben&nbsp;muss. "
+        description: "Eine der schönsten Vorlagen für einen Citytrip ist die Akropolis von Athen. Auf einem Felsen über der Stadt thronend, lockt das weltberühmte Wahrzeichen der griechischen Hauptstadt Jahr für Jahr kulturbegeisterte Entdecker aus aller Welt zu einer der bedeutendsten UNESCO-Welterbestätten Europas. Ein Monument der Geschichte, das man nicht nur wegen dem Parthenon, sondern auch wegen des sagenhaften Panoramas über Athen gesehen haben&nbsp;muss."
 
       - id: 1-3
         title: Orakel von Delphi
@@ -33,7 +33,7 @@
   title: "Hellenische Highlights"
   page: kultur
   img: bg-img2
-  description: "Romantische Häfen, verwinkelte Altstadt-Gassen, trotzige Festungen – im Freilichtmuseum Griechenland ist das nächste historische Highlight nicht weit entfernt. Der Großmeisterpalast von Rhodos, das von venezianischen Wehranlagen behütete Zentrum von Korfu-Stadt und das byzantinische Erbe von Thessaloniki machen den Städtetrip zur Zeitreise. Pittoreske Schmuckstücke wie Nafplio würzen das geschichtsträchtige Ambiente mit hellenischem Hafenflair."
+  description: "Romantische Häfen, verwinkelte Altstadt-Gassen, imposante Festungen – im Freilichtmuseum Griechenland ist das nächste historische Highlight nicht weit entfernt. Der Großmeisterpalast von Rhodos, das von venezianischen Wehranlagen behütete Zentrum von Korfu-Stadt und das byzantinische Erbe von Thessaloniki machen den Städtetrip zur Zeitreise. Pittoreske Schmuckstücke wie Nafplio würzen das geschichtsträchtige Ambiente mit hellenischem&nbsp;Hafenflair."
 
   pois:
 
