--- a/_data/kultur.yml
+++ b/_data/kultur.yml
@@ -19,10 +19,10 @@
 
       - id: 1-3
         title: Orakel von Delphi
-        description: "In der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Corinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas&nbsp;bestimmte."
+        description: "In der Antike als Mittelpunkt der Welt verehrt, gehören die Überreste der Heiligtümer des Apollon auch heute noch zu den beeindruckendsten Vermächtnissen der griechischen Kultur. Nur 15 Kilometer vom Golf von Korinth entfernt, am Fuße des Parnass-Gebirges, versetzen Sie sich zwischen Schatzhäusern, Theatern und Tempeln in eine Epoche, in der das sagenumwobene Orakel von Delphi über das Schicksal Europas&nbsp;bestimmte."
 
       - id: 1-4
-        title: Olympia Peleponnes
+        title: Olympia Peloponnes
         description: "Die Peloponnes verzaubert mit einer magischen Melange aus Stränden, Kultur und archäologischen Stätten. Dem Göttervater Zeus gewidmet, war das Areal einst Austragungsort sportlicher Wettkämpfe mit Athleten aus aller Welt. Eine Tradition, die bis heute Bestand hat und beim feierlichen Entzünden der olympischen Flamme vor den Ruinen des Hera-Tempels stilecht zelebriert wird. Ein absolutes Muss nicht nur für sportbegeisterte Aktivurlauber."
 
 
