--- a/_data/straende.yml
+++ b/_data/straende.yml
@@ -85,7 +85,7 @@
 
       - id: 3-1
         title: Ionisches Meer
-        description: "Zwischen der Hackenspitze des italienischen Stiefels und dem Kanal von Korinth wartet ein mit Highlights gespicktes Segelrevier darauf, erforscht zu werden. Ankern Sie vor Elafonisos inmitten karibisch anmutender Traumkulissen, erkunden Sie die grünen Küsten von Korfu oder statten Sie Ithaka, der Heimatinsel von Odysseus, einen Besuch ab. In den Häfen von Kefalonia erwartet Sie ein Reigen mediterraner Grandezza, die sich an der Schmugglerbucht von Zakynthos in das ultimative Postkartenmotiv&nbsp;verwandelt. "
+        description: "Zwischen der Hackenspitze des italienischen Stiefels und der westlichen Küste der Peloponnes wartet ein mit Highlights gespicktes Segelrevier darauf, erforscht zu werden. Erkunden Sie die grünen Küsten von Korfu oder statten Sie Ithaka, der Heimatinsel von Odysseus, einen Besuch ab. In den Häfen von Kefalonia erwartet Sie ein Reigen mediterraner Grandezza, die sich an der Schmugglerbucht von Zakynthos in das ultimative Postkartenmotiv verwandelt."
 
       - id: 3-2
         title: Kykladen
